packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/structure/wrong-root.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event structure validation, verify
if data without an <edxml> root tag is rejected
-->
<xml/>
